--- a/task3.html
+++ b/task3.html
@@ -17,7 +17,7 @@
             MAIN CONTENT
         </article>
         
-        <aside>
+        <aside class="second">
             SIDEBAR
         </aside>
         </main>
