--- a/Elzero_tasks/week3.html
+++ b/Elzero_tasks/week3.html
@@ -37,7 +37,8 @@
   <span class="top-right">3</span>
   <span class="bottom-right">4</span>
 </div> -->
-<ul class="main">
+
+<!-- <ul class="main">
   <li class="main-li">
     HTML
     <ol class="first" start="10">
@@ -61,7 +62,26 @@
       <li>Sveltejs</li>
     </ul>
   </li>
-</ul>
-
+</ul> -->
+<table>
+  <caption>Developers Rating</caption>
+  <thead>
+    <tr>
+    <th>Avatar</th>
+    <th>Group</th>
+    <th>Name</th>
+    <th>Points</th>
+    <th>Control</th>
+    </tr>
+  </thead>
+  <tbody>
+<tr><td><img src="g.png" alt=""></td><td>Ninja</td><td>Ahmed Mohamed</td><td>120</td><td><button></button></td></tr>
+<tr><td></td><td rowspan="2">Shades</td><td>Shady Nabil</td><td>180</td><td></td></tr>
+<tr><td></td><td>Emain Mohamed</td><td>160</td><td></td></tr>
+<tr><td></td><td rowspan="2">valhala</td><td>Mohamed Ibrahim</td><td>190</td><td></td></tr>
+<tr><td></td><td>Noor Atef</td><td>110</td><td></td></tr>
+<tr><td></td><td>Union</td><td>Mahmoud Adel</td><td>90</td><td></td></tr>
+  </tbody>
+</table>
 </body>
 </html>
