--- a/Elzero_tasks/week4.html
+++ b/Elzero_tasks/week4.html
@@ -17,11 +17,28 @@
 <p data-person="Ahmed">This Is Very Very Long Comment Number Two</p>
 <p data-person="Sayed">This Is Very Very Long Comment Number Three</p> -->
 
+<!-- <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
 <p>This Is Very Very Long Product Title</p>
-<p>This Is Very Very Long Product Title</p>
-<p>This Is Very Very Long Product Title</p>
+<p>This Is Very Very Long Product Title</p> -->
+
+<!-- <div></div>
+<div></div>
+<div></div> -->
+
+<!-- <div></div> -->
+ <div class="parent">
+    <div class="left">
+        <div class="button">Basic</div>
+        <div class="cont">Free</div>
+    </div>
+    <div class="right">
+        <div class="button">Pro</div>
+        <div class="cont">$30</div>
+    </div>
+ </div>
+
 </body>
 </html>
